--- a/app/src/main/res/layout/root2.xml
+++ b/app/src/main/res/layout/root2.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:text="Page2"
         android:id="@+id/textView"
+        android:background="#cccccc"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
