--- a/app/src/main/res/layout/root1.xml
+++ b/app/src/main/res/layout/root1.xml
@@ -6,7 +6,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="Page1"
-        android:id="@+id/textView"
+        android:id="@+id/textView_up"
         android:background="#ffccff"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
