--- a/app/src/main/res/layout/root2.xml
+++ b/app/src/main/res/layout/root2.xml
@@ -6,7 +6,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="Page2"
-        android:id="@+id/textView"
+        android:id="@+id/textView_up"
         android:background="#cccccc"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
