--- a/app/src/main/res/layout/root3.xml
+++ b/app/src/main/res/layout/root3.xml
@@ -6,6 +6,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Page3"
-        android:id="@+id/textView"
+        android:id="@+id/textView_up"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
