--- a/viewpagertable/src/main/res/values/attrs.xml
+++ b/viewpagertable/src/main/res/values/attrs.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ViewPagerTableItem">
-        <attr name="clolordown" format="color|integer"/>
-        <attr name="colorUp" format="color|integer"/>
-        <attr name="drawable_down" format="reference"></attr>
-        <attr name="drawable_up" format="reference"></attr>
         <attr name="imageview_up_id" format="reference"></attr>
         <attr name="imageview_down_id" format="reference"></attr>
-        <attr name="textview_id" format="reference"></attr>
+        <attr name="textview_up_id" format="reference"></attr>
+        <attr name="textview_down_id" format="reference"></attr>
     </declare-styleable>
 </resources>
