--- a/app/src/main/res/layout/viewpagertableitem.xml
+++ b/app/src/main/res/layout/viewpagertableitem.xml
@@ -1,5 +1,4 @@
-<com.cry.viewpagertable.ViewPagerTableItem
-    xmlns:ViewPagerTableItem="http://schemas.android.com/apk/res-auto"
+<com.cry.viewpagertable.ViewPagerTableItem xmlns:ViewPagerTableItem="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -7,44 +6,46 @@
     ViewPagerTableItem:imageview_up_id="@+id/imageView_up"
     ViewPagerTableItem:imageview_down_id="@+id/imageView_down"
     ViewPagerTableItem:textview_up_id="@+id/textView_up"
-    ViewPagerTableItem:textview_down_id="@+id/textView_down"
-    >
+    ViewPagerTableItem:textview_down_id="@+id/textView_down">
+
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher"
-            android:id="@+id/imageView_up"
-            />
+            android:id="@+id/imageView_up" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher"
-            android:id="@+id/imageView_down"
-            />
+            android:id="@+id/imageView_down" />
     </FrameLayout>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/frame">
+
         <TextView
             android:id="@+id/textView_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="up" />
+
         <TextView
             android:id="@+id/textView_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#ff8888"
-            android:text="down"
-            />
+            android:text="down" />
     </RelativeLayout>
 </com.cry.viewpagertable.ViewPagerTableItem>
